Mon Aug  7 15:02:40 2000                        Michael Jennings (mej)

Minor output bug.
----------------------------------------------------------------------
Wed Aug 23 14:55:51 2000                        Michael Jennings (mej)

Final touches for 1.3.
----------------------------------------------------------------------
Wed Aug 23 22:09:56 2000                        Michael Jennings (mej)

imgtool is the replacement for the old script Craig and I hacked
together for doing base images.  I've successfully created a base
image tarball with this.
----------------------------------------------------------------------
Mon Aug 28 18:12:32 2000                        Michael Jennings (mej)

Added a --tag option to ease building everything based on a particular
tag.
----------------------------------------------------------------------
Tue Sep  5 23:13:10 2000                        Michael Jennings (mej)

pkgtool now has the ability to query package dependencies.  This is
required for pkgsort, a new utility I'm working on for the 7.0.1
project.  It's almost done.
----------------------------------------------------------------------
Wed Sep  6 18:39:00 2000                        Chip Salzenberg (chip)

Debian build directory.
----------------------------------------------------------------------
Fri Sep  8 22:37:08 2000                        Michael Jennings (mej)

pkgsort consistently returns the same ordering on output now,
regardless of the ordering on input.  It looks like I still have some
dependency checks getting missed, though.
----------------------------------------------------------------------
Sat Sep  9 00:44:57 2000                        Michael Jennings (mej)

I fixed the dependency checking problems.  The resulting list still
doesn't result in a successful base image install because RedHat's
dependency info is incomplete.  *sigh*
----------------------------------------------------------------------