@@ -35,10 +35,9 @@ binary-indep: build
 	dh_installdirs
 
 	# Add here commands to install the files into debian/tmp
-	install *tool $(DEBTMP)/usr/bin
-	cd $(DEBTMP)/usr/bin && mv cdtool cdpreptool
+	install -m 755 *tool pkgsort $(DEBTMP)/usr/bin
 
-	dh_installdocs README
+	dh_installdocs README doc/???*
 #	dh_installmenu
 #	dh_installinit
 #	dh_installcron
